<resources>
    <string name="app_name">LetsChat</string>
    <string name="log_out">Log out</string>
    <string name="all_users">All Users</string>
    <string name="setting">Setting</string>
    <string name="display_name">Display Name</string>
    <string name="login">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_id">Email id</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="welcome_to_lapitchat">Welcome to LapitChat</string>
    <string name="logina">LOGIN ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="add_friends">ADD FRIENDS</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="user_id">USER ID</string>

    <string name="title_activity_friend_profile">FriendProfile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
