<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.blogspot.mrodpg.lapitchat.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/welcome_to_lapitchat"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="274dp" />

    <Button
        android:id="@+id/start_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="95dp"
        android:text="@string/need_a_new_account" />

    <Button
        android:id="@+id/start_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="33dp"
        android:text="@string/logina"
        android:background="@color/colorAccent"
        android:layout_alignStart="@+id/start_create_acc"
        android:layout_alignEnd="@+id/start_create_acc" />


</RelativeLayout>
